--- a/zeus_projects/WebContent/zeus/projects/index.html
+++ b/zeus_projects/WebContent/zeus/projects/index.html
@@ -9,8 +9,8 @@
 
 <title>Projects</title>
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 <style>
 .selected-true {
 	background-color: #428bca;
@@ -31,7 +31,7 @@
   }
 </style>
 </head>
-<body>
+<body style="margin-left: 20px">
 <div ng-include="'header.html'"></div>
 
 	<div id="wrap" ng-controller="ManageController">
@@ -46,7 +46,6 @@
 			<table class="table table-condensed">
 				<thead>
 					<tr>
-						<th>#</th>
 						<th>Name</th>
 						<th>Source Repository</th>
 						<th>Issues</th>
@@ -58,8 +57,7 @@
 				<tbody>
 					<tr class="selected-{{entry._selected_}}" ng-repeat="entry in data"
 						ng-click="showInfoForEntry(entry)">
-						<td>{{entry.project_id}}</td>
-						<td>{{entry.project_name}}</td>
+						<td nowrap><i class="fa fa-play-circle"></i> {{entry.project_name}}</div></td>
 						<td>{{entry.project_source_repository}}</td>
 						<td>{{entry.project_issues}}</td>
 						<td>{{entry.project_tasks}}</td>
@@ -76,13 +74,13 @@
 			<br>
 			<!-- new, edit and delete buttons -->
 			<div class="btn-group">
-				<input class="btn btn-default" type="button" value="New"
+				<input class="btn btn-default btn-sm" type="button" value="New"
 					ng-click="setOperation('new')"
 					ng-disabled="errorMessage || operation == 'new' || operation == 'update'"> <input
-					class="btn btn-default" type="button" value="Edit"
+					class="btn btn-default btn-sm" type="button" value="Edit"
 					ng-click="setOperation('update')"
 					ng-disabled="errorMessage || operation == 'new' || operation == 'update'"> <input
-					class="btn btn-default" type="button" value="Delete"
+					class="btn btn-default btn-sm" type="button" value="Delete"
 					ng-click="delete()"
 					ng-disabled="errorMessage || operation == 'new' || operation == 'update'">
 			</div>
@@ -91,8 +89,7 @@
 			<div>
 				<!-- input form -->
 				<div>
-					<label>#</label>
-					<input type="text" class="form-control" 
+					<input type="hidden" class="form-control" 
 						ng-model="selectedEntry.project_id" readonly> <br>
 					<br>
 					<label>Name</label>
@@ -129,9 +126,9 @@
 				
 				<!-- save and cancel buttons -->
 				<div class="btn-group">
-					<input class="btn btn-primary" type="button" value="Save" ng-show="operation == 'new' || operation == 'update'"
+					<input class="btn btn-primary btn-sm" type="button" value="Save" ng-show="operation == 'new' || operation == 'update'"
 						ng-click="confirmAction()"> 
-					<input class="btn btn-default" type="button" value="Cancel" ng-show="operation == 'new' || operation == 'update'"
+					<input class="btn btn-default btn-sm" type="button" value="Cancel" ng-show="operation == 'new' || operation == 'update'"
 						ng-click="cancelAction()">
 				</div>
 			</div>
